NetBSD Problem Report #39324

From bernd@arresum.veego.de  Sat Aug  9 09:19:03 2008
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2AB8963BB81
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  9 Aug 2008 09:19:03 +0000 (UTC)
Message-Id: <200808090918.m799IrKg017335@arresum.veego.de>
Date: Sat, 9 Aug 2008 11:18:53 +0200 (CEST)
From: Bernd Ernesti <pr200813@veego.de>
Reply-To: Bernd Ernesti <pr200813@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: kernel diagnostic assertion "l->l_stat != LSZOMB" failed
X-Send-Pr-Version: 3.95

>Number:         39324
>Category:       kern
>Synopsis:       kernel diagnostic assertion "l->l_stat != LSZOMB" failed
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 09 09:20:00 +0000 2008
>Closed-Date:    Sat Sep 06 19:42:10 +0000 2008
>Last-Modified:  Sat Sep 06 19:42:10 +0000 2008
>Originator:     Bernd Ernesti
>Release:        NetBSD 4.99.71
>Organization:

>Environment:
System: NetBSD 4.99.71
Architecture: i386
Machine: i386
>Description:

panic: kernel diagnostic assertion "l->l_stat != LSZOMB" failed: file "/src/sys/kern/kern_lwp.c", line 1326
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c051034c cs 8 eflags 246 cr2 bbae9000 ilevel 0
Stopped in pid 11852.1 (find) at        netbsd:breakpoint+0x4:  popl    %ebp

db{1}> mach cpu 0
using CPU 0
db{1}> bt
x86_stihlt(cc1c7be0,0,c0420f17,cc1c7be0,0,0,c08a4088,cc1c7be0,c0419e10,cc1c7be0) at netbsd:x86_stihlt+0x5
idle_loop(cc1c7be0,0,c01002cd,0,c01002cd,0,0,0,0,0) at netbsd:idle_loop+0x176
db{1}> mach cpu 1
using CPU 1
db{1}> bt
breakpoint(c084082f,d0728a08,c2f2e000,0,0,cc1bb254,d0728a1c,c040bbe0,d0205480,1) at netbsd:breakpoint+0x4
panic(c088d1a4,c07e6bbd,c0828ff5,c0828fc3,52e,c32526c0,d0728a3c,c041fd54,c07e6bbd,c0828fc3) at netbsd:panic+0x1b8
__kernassert(c07e6bbd,c0828fc3,52e,c0828ff5,d35ea730,d046fd80,d0728abc,c0354243,d046fd80,d0728aac) at netbsd:__kernassert+0x39
lwp_addref(d046fd80,d0728aac,3,c035485f,c089f5f4,1,0,d0728b88,d0205480,16d) at netbsd:lwp_addref+0xb4
procfs_lookup(d0728ad4,1,0,cc1bb03c,c06eea40,d35ea730,d0728c14,d0728c28,d35ea730,d35ea730) at netbsd:procfs_lookup+0x263
VOP_LOOKUP(d35ea730,d0728c14,d0728c28,c049f330,d0728b1c,0,d0728b4c,c044f78f,20,0) at netbsd:VOP_LOOKUP+0x8c
lookup(d0728c00,20002,400,d0728c1c,d0205480,16d,d0728b9c,c0491628,d0728c1c,d0205480) at netbsd:lookup+0x20b
namei(d0728c00,d020201c,d0728c0c,c04a521b,d35ea7d0,6,d0728c3c,bb91a6cc,0,0) at netbsd:namei+0x145
do_sys_stat(bb91a6cc,0,d0728c70,1,d0728c80,1,15,c0412060,d06dfcc8,1) at netbsd:do_sys_stat+0x37
sys___lstat30(d06d9020,d0728d00,d0728d28,bbae9000,bbae9000,d056e0d8,1,bb91a6cc,bb91a6d0,0) at netbsd:sys___lstat30+0x29
syscall(d0728d48,b3,ab,1f,1f,bb91a6d0,bb91a680,bfbfe5d8,bbbc2f58,bb91a680) at netbsd:syscall+0xab

>How-To-Repeat:
	This happend while installating a package.
	In the '=> Generating pre-install file lists' stage.
>Fix:

>Release-Note:

>Audit-Trail:
From: Frank Kardel <kardel@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/39324: kernel diagnostic assertion "l->l_stat != LSZOMB"
 failed
Date: Sun, 10 Aug 2008 20:01:21 +0200

 Also a common panic at my setup (Intel Q9450) when surfing with firefox. 
 Maybe triggered by npviewer.

 Frank

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39324 CVS commit: src/sys/miscfs/procfs
Date: Fri,  5 Sep 2008 14:01:11 +0000 (UTC)

 Module Name:	src
 Committed By:	skrll
 Date:		Fri Sep  5 14:01:11 UTC 2008

 Modified Files:
 	src/sys/miscfs/procfs: procfs_subr.c procfs_vnops.c

 Log Message:
 PR/39324 kernel diagnostic assertion "l->l_stat != LSZOMB" failed.

 Ignore procs with zero or all LSZOMB LWPs. Get a non-LSZOMB LWP to perform
 operations against as part of the deal.

 procfs really needs to be updated to support multi-threading fully.
 Hi Antti!


 To generate a diff of this commit:
 cvs rdiff -r1.91 -r1.92 src/sys/miscfs/procfs/procfs_subr.c
 cvs rdiff -r1.171 -r1.172 src/sys/miscfs/procfs/procfs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 06 Sep 2008 14:54:30 +0000
State-Changed-Why:
<skrll> commited the fix.  Please confirm fixed.


From: Bernd Ernesti <pr200813@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/39324 (kernel diagnostic assertion "l->l_stat != LSZOMB" failed)
Date: Sat, 6 Sep 2008 17:05:14 +0200

 On Sat, Sep 06, 2008 at 02:54:31PM +0000, rmind@NetBSD.org wrote:
 > Synopsis: kernel diagnostic assertion "l->l_stat != LSZOMB" failed
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: rmind@NetBSD.org
 > State-Changed-When: Sat, 06 Sep 2008 14:54:30 +0000
 > State-Changed-Why:
 > <skrll> commited the fix.  Please confirm fixed.

 I have no way to reproduce it. Please close it.

 Bernd

State-Changed-From-To: feedback->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 06 Sep 2008 19:42:10 +0000
State-Changed-Why:
Assume fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.